--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-vertical-timeline-component": "^2.6.2"
+    "react-vertical-timeline-component": "^2.6.2",
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
