--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-vertical-timeline-component": "^2.6.2",
+    "styled-components": "^5.1.0",
     "typescript": "^3.9.2"
   },
   "scripts": {
